k8s/Jenkins/jenkins-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd
---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
  name: jenkins-pvc
  namespace: ci-cd
 spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Gi
   #storageClassName: jenkns # Uncomment and specify if needed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: ci-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        # image: jenkins:lts
        ports:
        - containerPort: 8080
        - containerPort: 50000
        resources:
          #requests:
          #  memory: "0.5Gi"
          #  cpu: "1000m"
          limits:
            memory: "3Gi"
            cpu: "2000m"
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: ci-cd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent-service
  namespace: ci-cd
spec:
  type: ClusterIP
  ports:
  - name: jnlp
    port: 50000
    targetPort: 50000
  selector:
    app: jenkins
