k8s/Jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: ci-cd
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    jenkins.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.sanches.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
  #ingressClassName: nginx  
  ingressClassName: traefik
